--- a/webroot/mobile/html/jifen/css/basic.css
+++ b/webroot/mobile/html/jifen/css/basic.css
@@ -13,8 +13,9 @@ i{font-style: normal;}
 h1,h2,h3,h4,h5,h6{}
 p{background-color: transparent;word-break: break-all;}
 /*app*/
+input{padding:0;}
 a,button,input{-webkit-tap-highlight-color:rgba(255,0,0,0);border:none;background: none;}
-input[type='text'],textarea{-webkit-appearance: none;}/*iphone内阴影*/
+input[type='text'],textarea{-webkit-appearance: none;padding:0;}/*iphone内阴影*/
 textarea::-webkit-scrollbar{display: none;}/*隐藏多文本框滚动条*/
 table,tbody,tr,td,th,thead,tfoot{border:1px #e5e5e5 solid;}
 /*reset css end*/
@@ -44,6 +45,7 @@ input::-webkit-input-placeholder { /* WebKit browsers */ color: #b5b5b5; }
 .mt25{margin-top:25px;}
 .mb5{margin-bottom:5px;}
 .mt5{margin-top:5px;}
+.mt37{margin-top:37px;}
 .btop{border-top: 1px #d5d5d5 solid;}
 .fz16{font-size: 16px;}
 .fz14{font-size: 14px;}
