--- a/webroot/mobile/html/jifen/css/style.css
+++ b/webroot/mobile/html/jifen/css/style.css
@@ -114,3 +114,5 @@ max-width: 600px;}
 	.downcon.point{width:55%;}
 	.downcon .submitbtn{padding:2px 25px;margin-left:55px;}
 }
+.home_head .title{position: absolute;width:130px;left:50%;margin-left:-65px;padding-left:15px;background: url('../images/logo.png') no-repeat left center;background-size:20px 25px;}
+
