--- a/webroot/mobile/html/jifen/css/style.css
+++ b/webroot/mobile/html/jifen/css/style.css
@@ -38,6 +38,7 @@ background-size:20px 20px;}
 .items_con dl dt{width:76%;margin:0 auto;margin-bottom:6px;min-height:70px;max-height: 70px;}
 .items_con dl dt img{width:100%;display: block;height:auto;}
 .items_con dl dd{font-size: 11px;margin-bottom:3px;line-height: 11px;}
+.items_con dl dd.productName{ max-width: 90%; margin: 0 auto;word-break: break-all;display: -webkit-box;-webkit-box-orient: vertical;overflow: hidden; -webkit-line-clamp: 1;line-height: 14px;}
 .items_price{color:#ff6c4a;}
 .items_con{overflow: hidden;background: #fff;min-height:130px;}
 .home_infolist{overflow: hidden;/*border-top:1px #dedede solid;*/}
@@ -115,4 +116,3 @@ max-width: 600px;}
 	.downcon .submitbtn{padding:2px 25px;margin-left:55px;}
 }
 .home_head .title{position: absolute;width:130px;left:50%;margin-left:-65px;padding-left:15px;background: url('../images/logo.png') no-repeat left center;background-size:20px 25px;}
-
