--- a/webroot/mobile/html/jifen/css/style.css
+++ b/webroot/mobile/html/jifen/css/style.css
@@ -123,3 +123,4 @@ max-width: 600px;}
 	.downcon .submitbtn{padding:2px 25px;margin-left:55px;}
 }
 .home_head .title{position: absolute;width:130px;left:50%;margin-left:-65px;padding-left:15px;background: url('../images/logo.png') no-repeat left center;background-size:20px 25px;}
+.cash-tips{font-size: 13px;line-height: 16px;color: #525151;margin-top: 15px;}
