--- a/webroot/mobile/css/common.css
+++ b/webroot/mobile/css/common.css
@@ -130,12 +130,12 @@ input::-webkit-input-placeholder { /* WebKit browsers */ color: #7a7d82; }
 	/*display: -webkit-flex;display: flex;-webkit-justify-content: center;justify-content: center;-webkit-align-items:center;align-items: center;*/}
 .alert span{line-height: 0.38rem;text-align: center;background: rgba(0,0,0,0.8);border-radius: 0.15rem;padding:0.3rem;display:block;}
 /*web字体图标*/
- @font-face {font-family: 'iconfont';
-    src: url('../font/iconfont.eot'); /* IE9*/
-    src: url('../font/iconfont.eot?#iefix') format('embedded-opentype'), /*IE6-IE8 */
-    url('../font/iconfont.woff') format('woff'), /* chrome、firefox */
-   	url('../font/iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-   	url('../font/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+@font-face {font-family: 'iconfont';
+    src: url('../font/iconfont.eot'); 
+    src: url('../font/iconfont.eot?#iefix') format('embedded-opentype'), 
+    url('../font/iconfont.woff') format('woff'),
+   	url('../font/iconfont.ttf') format('truetype'), 
+   	url('../font/iconfont.svg#iconfont') format('svg'); 
 }
 
 .iconfont{
@@ -146,13 +146,13 @@ input::-webkit-input-placeholder { /* WebKit browsers */ color: #7a7d82; }
     -moz-osx-font-smoothing: grayscale;}
   /*线上字体图标*/  
 /*@font-face {
-  font-family: 'iconfont';
-  src: url('//at.alicdn.com/t/font_1469154576_1512647.eot'); /* IE9*/
-  /*src: url('//at.alicdn.com/t/font_1469154576_1512647.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  /*url('//at.alicdn.com/t/font_1469154576_1512647.woff') format('woff'), /* chrome、firefox */
-  /*url('//at.alicdn.com/t/font_1469154576_1512647.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
- /* url('//at.alicdn.com/t/font_1469154576_1512647.svg#iconfont') format('svg'); /* iOS 4.1- */
-/*}
+  font-family: 'iconfont'; 
+  src: url('//at.alicdn.com/t/font_79w2asgkf8lx47vi.eot');
+  src: url('//at.alicdn.com/t/font_79w2asgkf8lx47vi.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_79w2asgkf8lx47vi.woff') format('woff'),
+  url('//at.alicdn.com/t/font_79w2asgkf8lx47vi.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_79w2asgkf8lx47vi.svg#iconfont') format('svg');
+}
                                          */
                     
 /*header*/
@@ -212,3 +212,4 @@ header{display:none;}
 .indexboxlist section img{width:50%;height:auto;display: block;margin:0 auto;}
 .flex{display:-webkit-box;display:box;-webkit-box-align: center;-webkit-box-pack:start;}
 .flex_jusitify{-webkit-box-pack:justify;}
+.flex_center{-webkit-box-pack:center;}
