--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1324,6 +1324,38 @@ box-align:center;-webkit-box-align:center;}
 .chatbottom .chatcon{border:1px #ccc solid;height:32px;width:90%;margin:0 auto;margin-top:9px;border-radius: 10px;text-indent:.2rem;line-height: 30px;}
 .chatbottom .chatcon button{display: block;width:60px;background: #B71C2D;color:#fff;height:32px;border-radius: 0 10px 10px 0;margin-top:-1px;}
 .chatbottom .chatcon input{width:5rem;}
-.dialog_entrol{height:auto;}
-.dialog_entrol .entrol_group{background: #fff;text-align: center;color:#B71C2D;}
-.dialog_entrol .entrol_group div{height:.9rem;font-size: .26rem;}
+/*活动详情修改*/
+.a_fixed_group{position: fixed;width:100%;max-width: 750px;bottom:0;}
+.a_fixed_group .bottombtn .l-btn,.a_fixed_group .bottombtn .r-btn{display: block;width:50%;text-align: center;height:45px;line-height: 45px;font-size: 15px;color:#fff;}
+.a_fixed_group .bottombtn .l-btn{background:#0083fb;}
+.a_fixed_group .bottombtn .r-btn{background: #b71c2d;}
+.a_fixed_group .entrol_group{background: #fff;text-align: center;color:#B71C2D;border-top:1px #eaabb2 solid;-webkit-transform: translateY(135px);transform: translateY(135px);position: relative;z-index:1;transition: all .1s ease-in;}
+.a_fixed_group .hide_group{-webkit-transform: translateY(0px);transform: translateY(0px);transition: all .1s ease-in;}
+.a_fixed_group .bottombtn{position: relative;z-index:2;}
+.a_fixed_group .entrol_group .choose_num{height:45px;font-size: 14px;line-height: 45px;border-bottom:1px #eaabb2 solid;display: block;color:#B71C2D;}
+.sing-up .choose_cooper{height:.8rem;font-size: .28rem;color:#999;}
+.fixedbottm{position:fixed;bottom:1rem;left:0;right:0;}
+.entroll-search{height:40px;padding:0 .6rem;}
+.entroll-search .search—input{width:90%;background: #f5f5f5;border:1px #efefef solid;border-radius: 15px;height:30px;padding-left:10px;display:-webkit-box;display:box;-webkit-box-align: center;}
+.entroll-search .search—input input{padding:0;width:85%;}
+.entroll-search .seachbtn{color:#c41c1b;font-size: 16px;letter-spacing: 1px;margin-left:15px;}
+.enrolled{font-size:14px;color:#B71C2D;background: #f5f5f5;height:35px;line-height: 35px;padding:0 .6rem;}
+.enrolled_choose{margin-top:.3rem;}
+.enrolled_choose .avatar{width:45px;height:45px;border-radius: 50%;overflow: hidden;position: absolute;}
+.enrolled_choose .avatar img{width:100%;height:100%;display: block;}
+.enrolled_choose .ulblock{padding:0 .3rem;overflow: hidden;}
+.enrolled_choose .ulblock li{border-bottom:1px #e5e5e5 solid;height:70px;padding:0 .3rem;}
+.enrolled_choose .ulblock .ico{color:#B71C2D;font-size: 18px; display: block;margin-right:20px;width:20px;height:20px;line-height: 20px;}
+.enrolled_choose .ulblock .r_info{height:45px;}
+.enrolled_choose .ulblock li:last-of-type{/*border-bottom:none;*/}
+.enrolled_choose .ulblock .userinfo{padding-left:55px;}
+.enrolled_choose .ulblock .userinfo h3{font-size: 15px;padding-top:3px;line-height: 18px;}
+.enrolled_choose .ulblock .userinfo .bominfo{margin-top:8px;color:#999;font-size: 13px;}
+.enrolled_choose .ulblock .userinfo .bominfo .color-items{font-size: 15px;margin-right:5px;}
+/*约见*/
+.meet_search_box{background: #B71C2D;height:48px;position: fixed;top:0;width:100%;max-width: 750px;z-index: 999;}
+.meet_search_box .search-content{width:6rem;height:28px;background: #fff;border-radius: 15px;line-height: 28px;padding-left:8px;}
+.meet_search_box .search-content .iconfont{color:#B71C2D;}
+.meet_search_box .rico{color:#e2a4ab;margin-left:15px;font-size: 20px;width:20px;height:28px;line-height: 28px;position: relative}
+.meet_search_box .rico .iconfont{font-size: 20px;display:block;}
+.meet_search_box .rico .num{position: absolute;right:-6px;top:0;width:12px;height:12px;border-radius: 50%;background: #fff;font-size: 7px;color:#B71C2D;text-align: center;line-height: 12px;}
