--- a/webroot/mobile/html/jifen/css/basic.css
+++ b/webroot/mobile/html/jifen/css/basic.css
@@ -50,3 +50,4 @@ input::-webkit-input-placeholder { /* WebKit browsers */ color: #b5b5b5; }
 .fz16{font-size: 16px;}
 .fz14{font-size: 14px;}
 .pd10{padding:10px 0;}
+.w_19{width:19%;}
