--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1341,17 +1341,20 @@ box-align:center;-webkit-box-align:center;}
 .entroll-search .seachbtn{color:#c41c1b;font-size: 16px;letter-spacing: 1px;margin-left:15px;}
 .enrolled{font-size:14px;color:#B71C2D;background: #f5f5f5;height:35px;line-height: 35px;padding:0 .6rem;}
 .enrolled_choose{margin-top:.3rem;}
-.enrolled_choose .avatar{width:45px;height:45px;border-radius: 50%;overflow: hidden;position: absolute;}
-.enrolled_choose .avatar img{width:100%;height:100%;display: block;}
+.enrolled_choose .avatar{width:45px;height:45px;border-radius: 50%;position: relative;}
+.enrolled_choose .avatar .v{position: absolute;background: url(img/v.png) no-repeat;background-size:contain;width:.3rem;height:.3rem;bottom:0;right:0;}
+.enrolled_choose .avatar img{width:100%;height:100%;display: block;overflow: hidden;border-radius: 50%;}
 .enrolled_choose .ulblock{padding:0 .3rem;overflow: hidden;}
-.enrolled_choose .ulblock li{border-bottom:1px #e5e5e5 solid;height:70px;padding:0 .3rem;}
+.enrolled_choose .ulblock li{border-bottom:1px #e5e5e5 solid;height:1.6rem;padding:0 .3rem;}
 .enrolled_choose .ulblock .ico{color:#B71C2D;font-size: 18px; display: block;margin-right:20px;width:20px;height:20px;line-height: 20px;}
-.enrolled_choose .ulblock .r_info{height:45px;}
+.enrolled_choose .ulblock .r_info{/*height:45px;*/}
 .enrolled_choose .ulblock li:last-of-type{/*border-bottom:none;*/}
-.enrolled_choose .ulblock .userinfo{padding-left:55px;}
-.enrolled_choose .ulblock .userinfo h3{font-size: 15px;padding-top:3px;line-height: 18px;}
-.enrolled_choose .ulblock .userinfo .bominfo{margin-top:8px;color:#999;font-size: 13px;}
-.enrolled_choose .ulblock .userinfo .bominfo .color-items{font-size: 15px;margin-right:5px;}
+.enrolled_choose .ulblock .userinfo{padding-left:15px;}
+.enrolled_choose .ulblock .userinfo h3{font-size: 15px;}
+.enrolled_choose .ulblock .userinfo h3 .job{color:#999;font-size: 11px;}
+.enrolled_choose .ulblock .userinfo .commpany{color:#666;font-size: 12px;margin-top:8px;}
+.enrolled_choose .ulblock .userinfo .bominfo{margin-top:10px;color:#999;font-size: 13px;}
+.enrolled_choose .ulblock .userinfo .bominfo .color-items{font-size: 14px;margin-right:5px;vertical-align: middle;}
 /*约见*/
 .meet_search_box{background: #B71C2D;height:48px;position: fixed;top:0;width:100%;max-width: 750px;z-index: 999;}
 .meet_search_box .search-content{width:6rem;height:28px;background: #fff;border-radius: 15px;line-height: 28px;padding-left:8px;}
@@ -1359,3 +1362,15 @@ box-align:center;-webkit-box-align:center;}
 .meet_search_box .rico{color:#e2a4ab;margin-left:15px;font-size: 20px;width:20px;height:28px;line-height: 28px;position: relative}
 .meet_search_box .rico .iconfont{font-size: 20px;display:block;}
 .meet_search_box .rico .num{position: absolute;right:-6px;top:0;width:12px;height:12px;border-radius: 50%;background: #fff;font-size: 7px;color:#B71C2D;text-align: center;line-height: 12px;}
+.chatinfo_list{background: #fff;}
+.chatinfo_list li{border-bottom:1px #e5e5e5 solid;padding:0.2rem .3rem;}
+.chatinfo_list li .avatar{width:1.12rem;height:1.12rem;position:absolute;overflow:hidden;}
+.chatinfo_list li .avatar .num{position:absolute;width:14px;height:14px;background: #B71C2D;color:#fff;right:0;top:0;border-radius: 50%;color:.2rem;line-height: 14px;text-align: center;}
+.chatinfo_list li .avatar img{width:100%;height:100%;display: block;}
+.chatinfo_list li .l_info{height:1.12rem;}
+.chatinfo_list li .l_text{padding-left:1.22rem;padding-top:.1rem;}
+.chatinfo_list li .l_text .title{line-height: .5rem;}
+.chatinfo_list li .title span{font-size: .22rem;color:#999;margin-left:.2rem;}
+.chatinfo_list li .cont{font-size: .22rem;color:#666;}
+.chatinfo_list li .cont .iconfont{color:#B71C2D;margin-right:.05rem;font-size: .24rem;}
+.chatinfo_list li .r_info{color:#999;font-size: .22rem;}
