--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -375,7 +375,7 @@ border-bottom:none;top:-1px;margin-top:-1px;margin-left:-1px;}
 }
 .a_menusort a i{font-size:.58rem;height:.6rem;line-height: .6rem;}
 .dk{width:100%;}
-.dk ul{width:500%;overflow:hidden;font-size:0;background: #fff;}
+.dk ul{width:500%;overflow:hidden;font-size:0;background: #fff;min-height:2.44rem;}
 .dk li{display: inline-block;overflow:hidden;border-radius: 0.1rem;padding:0.2rem 0.1rem;}
 .dk a{width:4.23rem;height:2.44rem;overflow:hidden; display: block;position:relative;border-radius: 0.1rem;
 -webkit-box-shadow: 1px 1px 4px rgba(34, 44, 56, 0.3);box-shadow: 1px 1px 4px rgba(34, 44, 56, 0.3);}
