--- a/webroot/mobile/html/jifen/css/style.css
+++ b/webroot/mobile/html/jifen/css/style.css
@@ -54,12 +54,12 @@ background-size:20px 20px;}
 .home_item{}
 .home_exchange .title h1{background: url(icon/dh.png) left center no-repeat;background-size:20px 20px;padding-left:30px;}
 .itemtitle .more{font-size: 15px;background: url(icon/more.png) no-repeat  right center;width:80px;background-size:auto 12px;}
-.items_con dl{float:left;width:100%;text-align: center;padding-top:10px;border-right:1px #dedede solid;padding-bottom:10px;border-bottom:1px #dedede solid;}
-.items_con dl:nth-of-type(3n){border-right:1px transparent solid;}
-.items_con dl dt{width:76%;margin:0 auto;margin-bottom:6px;min-height:70px;max-height: 70px;}
-.items_con dl dt img{width:100%;display: block;height:auto;}
-.items_con dl dd{font-size: 11px;margin-bottom:3px;line-height: 11px;}
-.items_con dl dd.productName{ max-width: 90%; margin: 0 auto;word-break: break-all;display: -webkit-box;-webkit-box-orient: vertical;overflow: hidden; -webkit-line-clamp: 1;line-height: 15px;}
+.items_con .dl{float:left;width:100%;text-align: center;padding-top:10px;border-right:1px #dedede solid;padding-bottom:10px;border-bottom:1px #dedede solid;}
+.items_con .dl:nth-of-type(3n){border-right:1px transparent solid;}
+.items_con .dl .dt{width:76%;margin:0 auto;margin-bottom:6px;min-height:70px;max-height: 70px;}
+.items_con .dl .dt img{width:100%;display: block;height:auto;}
+.items_con .dl .dd{font-size: 11px;margin-bottom:3px;line-height: 11px;}
+.items_con .dl .dd.productName{ max-width: 90%; margin: 0 auto;word-break: break-all;display: -webkit-box;-webkit-box-orient: vertical;overflow: hidden; -webkit-line-clamp: 1;line-height: 15px;}
 .items_price{color:#ff6c4a;}
 .items_con{overflow: hidden;background: #fff;min-height:130px;}
 .home_infolist{overflow: hidden;/*border-top:1px #dedede solid;*/}
