--- a/webroot/mobile/html/jifen/css/basic.css
+++ b/webroot/mobile/html/jifen/css/basic.css
@@ -1,13 +1,13 @@
 /*reset css*/
 html, body, div,iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0;font: inherit; vertical-align: baseline; }
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {margin:0;padding:0;}
-html{background:#f5f5f5;}
+html{background:#f5f5f5;width:100%;overflow-x:hidden;}
 ol, ul{ list-style: none; }
 a{text-decoration: none; color:#222c38;outline:none;}
 img{border:0;}
 table { border-collapse: collapse; border-spacing: 0; }
 *{-webkit-tap-highlight-color: rgba(0, 0, 0, 0);tap-highlight-color: rgba(0, 0, 0, 0);   -webkit-box-sizing: border-box;box-sizing: border-box;}
-body {max-width: 720px;margin: 0 auto;background: #f6f6f6;-webkit-tap-highlight-color: rgba(0,0,0,0); font-size:14px;color:#525151;font-family: 'STHeiti','Microsoft YaHei',Helvetica,Arial,sans-serif;width:100%;}
+body {max-width: 720px;margin: 0 auto;background: #f6f6f6;-webkit-tap-highlight-color: rgba(0,0,0,0); font-size:14px;color:#525151;font-family: 'STHeiti','Microsoft YaHei',Helvetica,Arial,sans-serif;width:100%;overflow-x:hidden;}
 input, textarea, button,select{ outline: 0; resize: none;font-size:100%;font:inherit;background: rgba(255,255,255,0);}
 i{font-style: normal;}
 h1,h2,h3,h4,h5,h6{}
