--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -377,7 +377,7 @@ border-bottom:none;top:-1px;margin-top:-1px;margin-left:-1px;}
 .dk{width:100%;}
 .dk ul{width:500%;overflow:hidden;font-size:0;background: #fff;min-height:2.44rem;}
 .dk li{display: inline-block;overflow:hidden;border-radius: 0.1rem;padding:0.2rem 0.1rem;}
-.dk a{width:4.23rem;height:2.44rem;overflow:hidden; display: block;position:relative;border-radius: 0.1rem;
+.dk a.meet-con{width:4.23rem;height:2.44rem;overflow:hidden; display: block;position:relative;border-radius: 0.1rem;
 -webkit-box-shadow: 1px 1px 4px rgba(34, 44, 56, 0.3);box-shadow: 1px 1px 4px rgba(34, 44, 56, 0.3);}
 .dk img{width:100%;height:auto;display: block;}
 .dk span{position:absolute;right:-5%;padding:0 0.2rem 0 0.1rem ;background: #E01A48;top:0.3rem;color:#fff;font-size:0.24rem;
@@ -1228,7 +1228,8 @@ background:-webkit-linear-gradient(top,#54d76a 0%,#53d66a 50%,#53d569 100%);  ba
 .m-service-con{margin-top:.6rem;}
 .m_title_des{padding:.15rem .3rem;background: #fff;}
 .m_title_des h3{/*border-left:#e01a48 solid 2px;*/padding-left:14px;line-height:.32rem;font-size: .3rem;height:.34rem;position:relative;}
-.m_title_des h3:before{content: '';position:absolute;left:0;height:0;width:0;border:8px transparent solid;border-left:8px #b71c2d solid;top:50%;margin-top:-8px;}
+.m_title_des .title{padding-left:14px;line-height:.32rem;font-size: .3rem;height:.34rem;position:relative;display:block;}
+.m_title_des h3:before,.m_title_des .title:before{content: '';position:absolute;left:0;height:0;width:0;border:8px transparent solid;border-left:8px #b71c2d solid;top:50%;margin-top:-8px;}
 .m_sub-title{line-height: .34rem;}
 /*audio*/
 .video-js{background: #000;padding:.1rem;}
@@ -1331,9 +1332,9 @@ box-align:center;-webkit-box-align:center;}
 .a_fixed_group .bottombtn .l-btn,.a_fixed_group .bottombtn .r-btn{display: block;width:50%;text-align: center;height:45px;line-height: 45px;font-size: 15px;color:#fff;}
 .a_fixed_group .bottombtn .l-btn{background:#0083fb;}
 .a_fixed_group .bottombtn .r-btn{background: #b71c2d;}
-.a_fixed_group .entrol_group{background: #fff;text-align: center;color:#B71C2D;border-top:1px #eaabb2 solid;-webkit-transform: translateY(135px);transform: translateY(135px);position: relative;z-index:1;transition: all .1s ease-in;}
-.a_fixed_group .hide_group{-webkit-transform: translateY(0px);transform: translateY(0px);transition: all .1s ease-in;}
-.a_fixed_group .bottombtn{position: relative;z-index:2;}
+.a_fixed_group .entrol_group{background: #fff;text-align: center;color:#B71C2D;border-top:1px #eaabb2 solid;-webkit-transform: translateY(135px);transform: translateY(135px);position: relative;z-index:1;transition: all .1s ease-in;background: #f4f4f4;}
+.a_fixed_group .hide_group{-webkit-transform: translateY(0px);transform: translateY(0px);transition: all .1s ease-in;background: #f4f4f4;}
+.a_fixed_group .bottombtn{position: relative;z-index:2;height:45px;}
 .a_fixed_group .entrol_group .choose_num{height:45px;font-size: 14px;line-height: 45px;border-bottom:1px #eaabb2 solid;display: block;color:#B71C2D;}
 .sing-up .choose_cooper{height:.8rem;font-size: .28rem;color:#999;}
 .fixedbottm{position:fixed;bottom:1rem;left:0;right:0;}
@@ -1342,6 +1343,9 @@ box-align:center;-webkit-box-align:center;}
 .entroll-search .search—input input{padding:0;width:85%;}
 .entroll-search .seachbtn{color:#c41c1b;font-size: 16px;letter-spacing: 1px;margin-left:15px;}
 .enrolled{font-size:14px;color:#B71C2D;background: #f5f5f5;height:35px;line-height: 35px;padding:0 .6rem;}
+.enrolled .choosed{display:inline-block;border-radius: 5px;border:1px #B71C2D solid;height:22px;line-height: 22px;position: relative;padding:0 12px;}
+.enrolled .choosed i{position:relative;font-size: 14px;top:-2px;right:-4px;}
+
 .enrolled_choose{margin-top:.3rem;}
 .enrolled_choose .avatar{width:45px;height:45px;border-radius: 50%;position: relative;}
 .enrolled_choose .avatar .v{position: absolute;background: url(img/v.png) no-repeat;background-size:contain;width:.3rem;height:.3rem;bottom:0;right:0;}
